--- a/src/components/landing-page/landing-page.html
+++ b/src/components/landing-page/landing-page.html
@@ -19,7 +19,7 @@
 					</div>
 				</div>
 				<div class="info">
-					<a class="display-phone" href="tel:+1-972-293-4400">(972) 293-4400</a>
+					<a class="display-phone" href="tel:+1-972-293-4400">(972) 293-4400 ext. 2274 (CASH)</a>
 				</div>
 			</div>
 			<div class="info">
@@ -79,7 +79,7 @@
 						</div>
 					</div>
 					<div class="info">
-						<div class="display-phone">(972) 293-4400</div>
+						<div class="display-phone">(972) 293-4400 ext. 2274 (CASH)</div>
 					</div>
 				</div>
 				<div class="inputs" [ngClass]="{ 'submitted': showThankYou, 'not-submitted': !showThankYou }">
